@@ -6,6 +6,8 @@ tints =
     ferric_chloride = {0.282, 0.459, 0.275},
     phosphoric_acid = {1, 0.749, 0.831},
     boron = {0.922, 0.671, 0.298},
+    ammonia = {0.827, 0.922, 0.91},
+    ferrosilicon = {0.314, 0.282, 0.322},
 
     electronic_breadboard = {0, 1, 0},
     fluid_resistant_breadboard = {1, 0.5, 0},
